--- a/src/styles/colors.scss
+++ b/src/styles/colors.scss
@@ -2,4 +2,4 @@ $tangerine: #F08700;
 $orange-web: #F49F0A;
 $yellow-munsell: #EFCA08;
 $space-cadet: #2A324B;
-$polished-pine: #68A691;
+$honeydew: #E2FCEF;
