--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -11,6 +11,22 @@ main .row {
   padding: 10px 0;
   margin-bottom: 20px;
 }
+.my-sidebar #todoLists {
+  font-size: 20px;
+  border: 1px solid #2A324B;
+  padding: 10px;
+  display: flex;
+  justify-content: space-between;
+}
+.my-sidebar #todoLists #todoListRemove {
+  visibility: hidden;
+}
+.my-sidebar #todoLists:hover {
+  box-shadow: 0px 0px 5px black;
+}
+.my-sidebar #todoLists:hover #todoListRemove {
+  visibility: visible;
+}
 
 .my-page {
   background-color: #F49F0A;
