--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -3,8 +3,8 @@
 // #F08700 Tangerine (white text)
 // #F49F0A Orange Web
 // #EFCA08 Yellow Munsell
-// #2A324B Space Cadet (text color)
-// #E2FCEF Honeydew
+// #2A324B Space Cadet (dark text)
+// #E2FCEF Honeydew (light text)
 
 main .row {
     height: 100vh;
@@ -18,6 +18,26 @@ main .row {
         border-bottom: 2px solid colors.$honeydew;
         padding: 10px 0;
         margin-bottom: 20px;
+    }
+
+    #todoLists {
+        font-size: 20px;
+        border: 1px solid colors.$space-cadet;
+        padding: 10px;
+        display: flex;
+        justify-content: space-between;
+
+        #todoListRemove {
+            visibility: hidden;
+        }
+
+        &:hover {
+            box-shadow: 0px 0px 5px black;
+
+            #todoListRemove {
+                visibility: visible;
+            }
+        }
     }
 }
 
