--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -17,8 +17,13 @@ main .row {
   border-right: 2px solid #E2FCEF;
   padding: 10px;
 }
-.my-sidebar button {
+.my-sidebar .input-box button {
   background-color: #F49F0A;
+  border: 0;
+}
+.my-sidebar .input-box button:hover {
+  background-color: #2A324B;
+  color: #E2FCEF;
   border: 0;
 }
 .my-sidebar #todoLists {
@@ -76,8 +81,13 @@ main .row {
   padding: 10px;
   color: #E2FCEF;
 }
-.my-page .to-do-list #listWindow button {
+.my-page .to-do-list #listWindow .input-box button {
   background-color: #F08700;
+  border: 0;
+}
+.my-page .to-do-list #listWindow .input-box button:hover {
+  background-color: #2A324B;
+  color: #E2FCEF;
   border: 0;
 }
 .my-page .to-do-list #listWindow #todoItems {
@@ -92,6 +102,7 @@ main .row {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  width: 500px;
 }
 .my-page .to-do-list #listWindow #todoItems .list-item .check-and-x {
   display: flex;
@@ -99,20 +110,27 @@ main .row {
 .my-page .to-do-list #listWindow #todoItems .list-item:hover {
   box-shadow: 0px 0px 5px black;
 }
-.my-page .to-do-list #listWindow #todoItems .list-item:hover #todoItemCheck {
-  visibility: visible;
-}
 .my-page .to-do-list #listWindow #todoItems .list-item:hover #todoItemRemove {
-  visibility: visible;
-}
-.my-page .to-do-list #listWindow #todoItems #todoItemCheck {
-  visibility: hidden;
-}
-.my-page .to-do-list #listWindow #todoItems input[type=checkbox]:checked {
   visibility: visible;
 }
 .my-page .to-do-list #listWindow #todoItems #todoItemRemove {
   visibility: hidden;
+}
+.my-page .to-do-list .remove-completed {
+  display: flex;
+  justify-content: center;
+}
+.my-page .to-do-list .remove-completed button {
+  background-color: #F08700;
+  color: #E2FCEF;
+  border: 2px solid #2A324B;
+  border-top: 0;
+  width: 100%;
+  height: 50px;
+}
+.my-page .to-do-list .remove-completed button:hover {
+  background-color: #2A324B;
+  border: 0;
 }
 
 .input-box {
