Rewrite some HTML

--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -14,7 +14,7 @@ main .row {
     background-color: colors.$tangerine;
     color: colors.$honeydew;
 
-    .lists {
+    .lists-h2 {
         border-bottom: 2px solid colors.$honeydew;
         padding: 10px 0;
         margin-bottom: 20px;
