--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -6,6 +6,9 @@
 // #2A324B Space Cadet (dark text)
 // #E2FCEF Honeydew (light text)
 
+$spacer: 2rem;
+
+/*
 main .row {
     height: 100vh;
 }
@@ -175,4 +178,207 @@ main .row {
     input {
         flex-grow: 3;
     }
+}
+*/
+
+body {
+    margin: 0;
+    background-color: colors.$tangerine;
+}
+
+.all-tasks {}
+
+.task-list {
+    line-height: 1.7;
+    font-size: 1.2rem;
+    list-style: circle;
+    padding-left: 1.1em;
+}
+
+.list-name {
+    cursor: pointer;
+
+    &:hover {
+        opacity: 0.7;
+    }
+}
+
+form {
+    display: flex;
+}
+
+.button {
+    cursor: pointer;
+    background: 0;
+    border: 0;
+    padding: 0;
+    color: inherit;
+}
+
+.button.create {
+    font-size: 1.5rem;
+    font-weight: 900;
+    margin-right: 0.25em;
+    transition: opacity 250ms ease-in;
+
+    &:hover {
+        opacity: 0.7;
+    }
+}
+
+.button.delete {
+    opacity: 0.7;
+    font-size: 1rem;
+    transition: color 200ms;
+
+    &:hover {
+        color: colors.$tangerine;
+    }
+}
+
+.new {
+    background: transparent;
+    border: 0;
+    color: inherit;
+    border-bottom: 1px solid currentColor;
+    font-size: inherit;
+    outline: none;
+    padding: 0.25em;
+
+    transition: border-bottom 150ms ease-in;
+    order: 2;
+
+    &:focus {
+        border-bottom-width: 3px;
+    }
+
+    &:focus::placeholder {
+        opacity: 0.15;
+    }
+
+    &::placeholder {
+        opacity: 0.4;
+    }
+}
+
+.new.list {
+    font-size: 1.1rem;
+}
+
+.new.task {
+    margin-bottom: 0;
+}
+
+.active-list {
+    font-weight: 700;
+}
+
+.todo-list {
+    background-color: colors.$orange-web;
+    color: colors.$space-cadet;
+}
+
+.todo-header {
+    padding: $spacer;
+    background: colors.$honeydew;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.list-title {
+    margin: 0 1em 0 0;
+}
+
+.current-date {
+    margin: 0;
+    font-size: 1rem;
+}
+
+.todo-body {
+    padding: $spacer;
+    position: relative;
+}
+
+[type="checkbox"] {
+    opacity: 0;
+    position: absolute;
+}
+
+.task label {
+    display: inline-flex;
+    align-items: center;
+    position: relative;
+    margin-bottom: 1.25em;
+}
+
+.task {
+    position: relative;
+    margin-bottom: 1.25em;
+
+    &::after {
+        content: "";
+        position: absolute;
+        right: 0;
+        left: 0;
+        bottom: -0.5em;
+        height: 1px;
+        background: currentColor;
+        opacity: 0.1;
+    }
+}
+
+.custom-checkbox {
+    display: inline-block;
+    width: 0.75em;
+    height: 0.75em;
+    margin-right: 0.75em;
+    cursor: pointer;
+    border: 2px solid currentColor;
+    border-radius: 25%;
+    transform: scale(1);
+    transition: transform 150ms ease-in-out;
+}
+
+.task:hover .custom-checkbox {
+    transform: scale(1.2);
+    color: colors.$tangerine;
+}
+
+[type="checkbox"]:checked + label .custom-checkbox {
+    background: colors.$tangerine;
+    border-color: colors.$tangerine;
+}
+
+[type="checkbox"]:checked + label {
+    opacity: 0.5;
+}
+
+.task label::after {
+    content: "";
+    position: absolute;
+    left: 0;
+    right: 0;
+    left: 1.5em;
+    top: 50%;
+    height: 3px;
+    background: currentColor;
+    transform: scaleX(0);
+    transform-origin: right;
+    transition: transform 150ms ease-in-out;
+}
+
+[type="checkbox"]:checked + label::after {
+    transform: scaleX(1);
+    transform-origin: left;
+}
+
+.delete-stuff {
+    display: flex;
+    justify-content: space-evenly;
+    position: absolute;
+    width: 100%;
+    left: 0;
+    bottom: -35px;
+    color: colors.$space-cadet;
 }
