--- a/src/styles/colors.scss
+++ b/src/styles/colors.scss
@@ -1,5 +1,6 @@
 $tangerine: #F08700;
 $orange-web: #F49F0A;
-$yellow-munsell: #EFCA08;
 $space-cadet: #2A324B;
 $honeydew: #E2FCEF;
+$seafoam-green: #93E9BE;
+$jet: #30323D;
